--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".ui.TestActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.Test2Activity" />
     </application>
 
 </manifest>
