--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply from: 'config.gradle'
 buildscript {
     
     repositories {
@@ -31,30 +32,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    compileSdkVersion = 27
-    minSdkVersion = 19
-    targetSdkVersion = 27
-
-    // App dependencies
-    supportLibraryVersion = '27.1.1'
-
-    constraintVersion = '1.1.1'
-    gsonVersion = '2.8.2'
-    okhttpVersion = '3.9.0'
-    retrofitVersion = '2.3.0'
-    glideVersion = '4.0.0'
-    greendaoVersion = '3.2.2'
-    fragmentationVersion = '1.3.3'
-    rxjavaVersion = '2.1.5'
-    rxandroidVersion = '2.0.2'
-    rxbindingVersion = '2.1.1'
-    rxpermissionsVersion = '0.9.5@aar'
-    daggerVersion = '2.0.2'
-    javaxVersion = '10.0-b28'
-    butterknifeVersion = '8.8.1'
-    multidexVersion = '1.0.3'
-    leakcanaryVersion = '1.5.4'
-    fragmentationVersion = '1.3.3'
-    lottieVersion = '2.3.0'
-}
